rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__stack_overflow.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (stack_overflow),\nr###\"\n        req = raw_string(0x00, 0x00, 0x03, 0x14, 0x08, 0x14, 0xff, 0x9f,\n                0xde, 0x5d, 0x5f, 0xb3, 0x07, 0x8f, 0x49, 0xa7,\n                0x79, 0x6a, 0x03, 0x3d, 0xaf, 0x55, 0x00, 0x00,\n                0x00, 0x7e, 0x64, 0x69, 0x66, 0x66, 0x69, 0x65,\n                0x2d, 0x68, 0x65, 0x6c, 0x6c, 0x6d, 0x61, 0x6e,\n                0x2d, 0x67, 0x72, 0x6f, 0x75, 0x70, 0x2d, 0x65,\n                0x78, 0x63, 0x68, 0x61, 0x6e, 0x67, 0x65, 0x2d,\n                0x73, 0x68, 0x61, 0x32, 0x35, 0x36, 0x2c, 0x64,\n                0x69, 0x66, 0x66, 0x69, 0x65, 0x2d, 0x68, 0x65,\n                0x6c, 0x6c, 0x6d, 0x61, 0x6e, 0x2d, 0x67, 0x72,\n                0x6f, 0x75, 0x70, 0x2d, 0x65, 0x78, 0x63, 0x68,\n                0x61, 0x6e, 0x67, 0x65, 0x2d, 0x73, 0x68, 0x61,\n                0x31, 0x2c, 0x64, 0x69, 0x66, 0x66, 0x69, 0x65,\n                0x2d, 0x68, 0x65, 0x6c, 0x6c, 0x6d, 0x61, 0x6e,\n                0x2d, 0x67, 0x72, 0x6f, 0x75, 0x70, 0x31, 0x34,\n                0x2d, 0x73, 0x68, 0x61, 0x31, 0x2c, 0x64, 0x69,\n                0x66, 0x66, 0x69, 0x65, 0x2d, 0x68, 0x65, 0x6c,\n                0x6c, 0x6d, 0x61, 0x6e, 0x2d, 0x67, 0x72, 0x6f,\n                0x75, 0x70, 0x31, 0x2d, 0x73, 0x68, 0x61, 0x31,\n                0x00, 0x00, 0x00, 0x0f, 0x73, 0x73, 0x68, 0x2d,\n                0x72, 0x73, 0x61, 0x2c, 0x73, 0x73, 0x68, 0x2d,\n                0x64, 0x73, 0x73, 0x00, 0x00, 0x00, 0x9d, 0x61,\n                0x65, 0x73, 0x31, 0x32, 0x38, 0x2d, 0x63, 0x62,\n                0x63, 0x2c, 0x33, 0x64, 0x65, 0x73, 0x2d, 0x63,\n                0x62, 0x63, 0x2c, 0x62, 0x6c, 0x6f, 0x77, 0x66,\n                0x69, 0x73, 0x68, 0x2d, 0x63, 0x62, 0x63, 0x2c,\n                0x63, 0x61, 0x73, 0x74, 0x31, 0x32, 0x38, 0x2d,\n                0x63, 0x62, 0x63, 0x2c, 0x61, 0x72, 0x63, 0x66,\n                0x6f, 0x75, 0x72, 0x31, 0x32, 0x38, 0x2c, 0x61,\n                0x72, 0x63, 0x66, 0x6f, 0x75, 0x72, 0x32, 0x35,\n                0x36, 0x2c, 0x61, 0x72, 0x63, 0x66, 0x6f, 0x75,\n                0x72, 0x2c, 0x61, 0x65, 0x73, 0x31, 0x39, 0x32,\n                0x2d, 0x63, 0x62, 0x63, 0x2c, 0x61, 0x65, 0x73,\n                0x32, 0x35, 0x36, 0x2d, 0x63, 0x62, 0x63, 0x2c,\n                0x72, 0x69, 0x6a, 0x6e, 0x64, 0x61, 0x65, 0x6c,\n                0x2d, 0x63, 0x62, 0x63, 0x40, 0x6c, 0x79, 0x73,\n                0x61, 0x74, 0x6f, 0x72, 0x2e, 0x6c, 0x69, 0x75,\n                0x2e, 0x73, 0x65, 0x2c, 0x61, 0x65, 0x73, 0x31,\n                0x32, 0x38, 0x2d, 0x63, 0x74, 0x72, 0x2c, 0x61,\n                0x65, 0x73, 0x31, 0x39, 0x32, 0x2d, 0x63, 0x74,\n                0x72, 0x2c, 0x61, 0x65, 0x73, 0x32, 0x35, 0x36,\n                0x2d, 0x63, 0x74, 0x72, 0x00, 0x00, 0x00, 0x9d,\n                0x61, 0x65, 0x73, 0x31, 0x32, 0x38, 0x2d, 0x63,\n                0x62, 0x63, 0x2c, 0x33, 0x64, 0x65, 0x73, 0x2d,\n                0x63, 0x62, 0x63, 0x2c, 0x62, 0x6c, 0x6f, 0x77,\n                0x66, 0x69, 0x73, 0x68, 0x2d, 0x63, 0x62, 0x63,\n                0x2c, 0x63, 0x61, 0x73, 0x74, 0x31, 0x32, 0x38,\n                0x2d, 0x63, 0x62, 0x63, 0x2c, 0x61, 0x72, 0x63,\n                0x66, 0x6f, 0x75, 0x72, 0x31, 0x32, 0x38, 0x2c,\n                0x61, 0x72, 0x63, 0x66, 0x6f, 0x75, 0x72, 0x32,\n                0x35, 0x36, 0x2c, 0x61, 0x72, 0x63, 0x66, 0x6f,\n                0x75, 0x72, 0x2c, 0x61, 0x65, 0x73, 0x31, 0x39,\n                0x32, 0x2d, 0x63, 0x62, 0x63, 0x2c, 0x61, 0x65,\n                0x73, 0x32, 0x35, 0x36, 0x2d, 0x63, 0x62, 0x63,\n                0x2c, 0x72, 0x69, 0x6a, 0x6e, 0x64, 0x61, 0x65,\n                0x6c, 0x2d, 0x63, 0x62, 0x63, 0x40, 0x6c, 0x79,\n                0x73, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x6c, 0x69,\n                0x75, 0x2e, 0x73, 0x65, 0x2c, 0x61, 0x65, 0x73,\n                0x31, 0x32, 0x38, 0x2d, 0x63, 0x74, 0x72, 0x2c,\n                0x61, 0x65, 0x73, 0x31, 0x39, 0x32, 0x2d, 0x63,\n                0x74, 0x72, 0x2c, 0x61, 0x65, 0x73, 0x32, 0x35,\n                0x36, 0x2d, 0x63, 0x74, 0x72, 0x00, 0x00, 0x00,\n                0x69, 0x68, 0x6d, 0x61, 0x63, 0x2d, 0x6d, 0x64,\n                0x35, 0x2c, 0x68, 0x6d, 0x61, 0x63, 0x2d, 0x73,\n                0x68, 0x61, 0x31, 0x2c, 0x75, 0x6d, 0x61, 0x63,\n                0x2d, 0x36, 0x34, 0x40, 0x6f, 0x70, 0x65, 0x6e,\n                0x73, 0x73, 0x68, 0x2e, 0x63, 0x6f, 0x6d, 0x2c,\n                0x68, 0x6d, 0x61, 0x63, 0x2d, 0x72, 0x69, 0x70,\n                0x65, 0x6d, 0x64, 0x31, 0x36, 0x30, 0x2c, 0x68,\n                0x6d, 0x61, 0x63, 0x2d, 0x72, 0x69, 0x70, 0x65,\n                0x6d, 0x64, 0x31, 0x36, 0x30, 0x40, 0x6f, 0x70,\n                0x65, 0x6e, 0x73, 0x73, 0x68, 0x2e, 0x63, 0x6f,\n                0x6d, 0x2c, 0x68, 0x6d, 0x61, 0x63, 0x2d, 0x73,\n                0x68, 0x61, 0x31, 0x2d, 0x39, 0x36, 0x2c, 0x68,\n                0x6d, 0x61, 0x63, 0x2d, 0x6d, 0x64, 0x35, 0x2d,\n                0x39, 0x36, 0x00, 0x00, 0x00, 0x69, 0x68, 0x6d,\n                0x61, 0x63, 0x2d, 0x6d, 0x64, 0x35, 0x2c, 0x68,\n                0x6d, 0x61, 0x63, 0x2d, 0x73, 0x68, 0x61, 0x31,\n                0x2c, 0x75, 0x6d, 0x61, 0x63, 0x2d, 0x36, 0x34,\n                0x40, 0x6f, 0x70, 0x65, 0x6e, 0x73, 0x73, 0x68,\n                0x2e, 0x63, 0x6f, 0x6d, 0x2c, 0x68, 0x6d, 0x61,\n                0x63, 0x2d, 0x72, 0x69, 0x70, 0x65, 0x6d, 0x64,\n                0x31, 0x36, 0x30, 0x2c, 0x68, 0x6d, 0x61, 0x63,\n                0x2d, 0x72, 0x69, 0x70, 0x65, 0x6d, 0x64, 0x31,\n                0x36, 0x30, 0x40, 0x6f, 0x70, 0x65, 0x6e, 0x73,\n                0x73, 0x68, 0x2e, 0x63, 0x6f, 0x6d, 0x2c, 0x68,\n                0x6d, 0x61, 0x63, 0x2d, 0x73, 0x68, 0x61, 0x31,\n                0x2d, 0x39, 0x36, 0x2c, 0x68, 0x6d, 0x61, 0x63,\n                0x2d, 0x6d, 0x64, 0x35, 0x2d, 0x39, 0x36, 0x00,\n\n                ##3rd byte in this next line causes crash\n                0x00, 0x00, 0x28, 0x7a, 0x6c, 0x69, 0x62, 0x40,\n                0x6f, 0x70, 0x65, 0x6e, 0x73, 0x73, 0x68, 0x2e,\n                0x63, 0x6f, 0x6d, 0x2c, 0x7a, 0x6c, 0x69, 0x62,\n                0x2c, 0x6e, 0x6f, 0x6e, 0x65, 0x00, 0x00, 0x00,\n                0x1a, 0x7a, 0x6c, 0x69, 0x62, 0x40, 0x6f, 0x70,\n                0x65, 0x6e, 0x73, 0x73, 0x68, 0x2e, 0x63, 0x6f,\n                0x6d, 0x2c, 0x7a, 0x6c, 0x69, 0x62, 0x2c, 0x6e,\n                0x6f, 0x6e, 0x65, 0x00, 0x00, 0x00, 0x00, 0x00,\n                0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n                0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n                0x0a);\n    \"###).into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
req = raw_string(0, 0, 3, 20, 8, 20, 255, 159, 222, 93, 95, 179, 7, 143, 73, 167, 121, 106, 3, 61, 175, 85, 0, 0, 0, 126, 100, 105, 102, 102, 105, 101, 45, 104, 101, 108, 108, 109, 97, 110, 45, 103, 114, 111, 117, 112, 45, 101, 120, 99, 104, 97, 110, 103, 101, 45, 115, 104, 97, 50, 53, 54, 44, 100, 105, 102, 102, 105, 101, 45, 104, 101, 108, 108, 109, 97, 110, 45, 103, 114, 111, 117, 112, 45, 101, 120, 99, 104, 97, 110, 103, 101, 45, 115, 104, 97, 49, 44, 100, 105, 102, 102, 105, 101, 45, 104, 101, 108, 108, 109, 97, 110, 45, 103, 114, 111, 117, 112, 49, 52, 45, 115, 104, 97, 49, 44, 100, 105, 102, 102, 105, 101, 45, 104, 101, 108, 108, 109, 97, 110, 45, 103, 114, 111, 117, 112, 49, 45, 115, 104, 97, 49, 0, 0, 0, 15, 115, 115, 104, 45, 114, 115, 97, 44, 115, 115, 104, 45, 100, 115, 115, 0, 0, 0, 157, 97, 101, 115, 49, 50, 56, 45, 99, 98, 99, 44, 51, 100, 101, 115, 45, 99, 98, 99, 44, 98, 108, 111, 119, 102, 105, 115, 104, 45, 99, 98, 99, 44, 99, 97, 115, 116, 49, 50, 56, 45, 99, 98, 99, 44, 97, 114, 99, 102, 111, 117, 114, 49, 50, 56, 44, 97, 114, 99, 102, 111, 117, 114, 50, 53, 54, 44, 97, 114, 99, 102, 111, 117, 114, 44, 97, 101, 115, 49, 57, 50, 45, 99, 98, 99, 44, 97, 101, 115, 50, 53, 54, 45, 99, 98, 99, 44, 114, 105, 106, 110, 100, 97, 101, 108, 45, 99, 98, 99, 64, 108, 121, 115, 97, 116, 111, 114, 46, 108, 105, 117, 46, 115, 101, 44, 97, 101, 115, 49, 50, 56, 45, 99, 116, 114, 44, 97, 101, 115, 49, 57, 50, 45, 99, 116, 114, 44, 97, 101, 115, 50, 53, 54, 45, 99, 116, 114, 0, 0, 0, 157, 97, 101, 115, 49, 50, 56, 45, 99, 98, 99, 44, 51, 100, 101, 115, 45, 99, 98, 99, 44, 98, 108, 111, 119, 102, 105, 115, 104, 45, 99, 98, 99, 44, 99, 97, 115, 116, 49, 50, 56, 45, 99, 98, 99, 44, 97, 114, 99, 102, 111, 117, 114, 49, 50, 56, 44, 97, 114, 99, 102, 111, 117, 114, 50, 53, 54, 44, 97, 114, 99, 102, 111, 117, 114, 44, 97, 101, 115, 49, 57, 50, 45, 99, 98, 99, 44, 97, 101, 115, 50, 53, 54, 45, 99, 98, 99, 44, 114, 105, 106, 110, 100, 97, 101, 108, 45, 99, 98, 99, 64, 108, 121, 115, 97, 116, 111, 114, 46, 108, 105, 117, 46, 115, 101, 44, 97, 101, 115, 49, 50, 56, 45, 99, 116, 114, 44, 97, 101, 115, 49, 57, 50, 45, 99, 116, 114, 44, 97, 101, 115, 50, 53, 54, 45, 99, 116, 114, 0, 0, 0, 105, 104, 109, 97, 99, 45, 109, 100, 53, 44, 104, 109, 97, 99, 45, 115, 104, 97, 49, 44, 117, 109, 97, 99, 45, 54, 52, 64, 111, 112, 101, 110, 115, 115, 104, 46, 99, 111, 109, 44, 104, 109, 97, 99, 45, 114, 105, 112, 101, 109, 100, 49, 54, 48, 44, 104, 109, 97, 99, 45, 114, 105, 112, 101, 109, 100, 49, 54, 48, 64, 111, 112, 101, 110, 115, 115, 104, 46, 99, 111, 109, 44, 104, 109, 97, 99, 45, 115, 104, 97, 49, 45, 57, 54, 44, 104, 109, 97, 99, 45, 109, 100, 53, 45, 57, 54, 0, 0, 0, 105, 104, 109, 97, 99, 45, 109, 100, 53, 44, 104, 109, 97, 99, 45, 115, 104, 97, 49, 44, 117, 109, 97, 99, 45, 54, 52, 64, 111, 112, 101, 110, 115, 115, 104, 46, 99, 111, 109, 44, 104, 109, 97, 99, 45, 114, 105, 112, 101, 109, 100, 49, 54, 48, 44, 104, 109, 97, 99, 45, 114, 105, 112, 101, 109, 100, 49, 54, 48, 64, 111, 112, 101, 110, 115, 115, 104, 46, 99, 111, 109, 44, 104, 109, 97, 99, 45, 115, 104, 97, 49, 45, 57, 54, 44, 104, 109, 97, 99, 45, 109, 100, 53, 45, 57, 54, 0, 0, 0, 40, 122, 108, 105, 98, 64, 111, 112, 101, 110, 115, 115, 104, 46, 99, 111, 109, 44, 122, 108, 105, 98, 44, 110, 111, 110, 101, 0, 0, 0, 26, 122, 108, 105, 98, 64, 111, 112, 101, 110, 115, 115, 104, 46, 99, 111, 109, 44, 122, 108, 105, 98, 44, 110, 111, 110, 101, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10);
