rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__unexpected_assign.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (unexpected_assign),\nr###\"\n    while(y = recv(socket:soc, length:1024)) {\n    buf1 += y;\n    }\n    \"###).into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
while (y = recv(socket: soc, length: 1024);) {{ ... }}
