rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__unexpected_equal_operator.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (unexpected_equal_operator),\nr###\"\n# Message Server runs on ports 36xx or 39xx\nif (port < 3600 || port >= 3700)\nif (port < 3900 || port >= 4000)\nexit(0);\n\nsoc = open_sock_tcp(port);\n\n    \"###).into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
if (port < 3600 || port >= 3700) if (port < 3900 || port >= 4000) exit(0);
soc = open_sock_tcp(port);
