rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__unexpected_noop.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (unexpected_noop),\nr###\"\n    if( ! version || version == '' ) return;\n    \"###).into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
if (!version || version == []) return NoOp;
