rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__unexpected_plusplus.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (unexpected_plusplus),\nr###\"\n    cookie_jar[this_cookie]++;\n    \"###).into_iter().map(| stmt |\nstmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
cookie_jar[this_cookie]++
