rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__variable.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (variable),\n\"a;\").into_iter().map(| stmt | stmt.to_string()).collect :: < Vec < _ >>\n().join(\"\\n\")"
snapshot_kind: text
---
a
